--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -114,7 +114,7 @@ jobs:
         with:
           name: distribution
           path: dist
-          pattern: *.tar.gz
+          pattern: '*.tar.gz'
       - name: GitHub Release
         id: github-release
         env:
