--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    runs-on: "ubuntu-latest"
+    runs-on: "ubuntu-18.04"
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     outputs:
@@ -21,18 +21,10 @@ jobs:
       version: ${{ steps.determine-version.outputs.version }}
     steps:
       - name: Checkout HEAD
-        if: ${{ always() && needs.check_version.outputs.release_type == 'full' }}
         uses: actions/checkout@v4
         with:
           submodules: recursive
           fetch-depth: 1
-      - name: Checkout TAG
-        uses: actions/checkout@v4
-        if: ${{ always() && needs.check_version.outputs.release_type == 'dry-run' }}
-        with:
-          submodules: recursive
-          fetch-depth: 1
-          ref: refs/tags/${{ inputs.tag }}
       - name: Set up Python
         id: setup-python
         uses: actions/setup-python@v5
