--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,18 +26,18 @@ jobs:
         run: |
           if [[ '${{inputs.tag}}' == 'dry-run' ]]; then
             echo "Found 'dry-run' tag. Setting release type 'dry-run'."
-            echo "release_type='dry-run'" >> "$GITHUB_OUTPUT"
+            echo "release_type=dry-run" >> "$GITHUB_OUTPUT"
             exit 0
           fi
 
           if [[ ! '${{inputs.tag}}' =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo "Invalid version format: '${{inputs.tag}}'. Setting release type 'error'."
-            echo "release_type='error'" >> "$GITHUB_OUTPUT"
+            echo "release_type=error" >> "$GITHUB_OUTPUT"
             exit 1
           fi
 
           echo "Found valid version format '${{inputs.tag}}'  Setting release type 'full'.
-          echo "release_type='full'" >> "$GITHUB_OUTPUT"
+          echo "release_type=full" >> "$GITHUB_OUTPUT"
 
   build:
     runs-on: "ubuntu-latest"
