--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
             exit 0
           fi
 
-          if [[ ! '${{inputs.tag}}' =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          if [[ ! '${{inputs.tag}}' =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo "Invalid version format: '${{inputs.tag}}'. Setting release type 'error'."
             echo "release_type=error" >> "$GITHUB_ENV"
             exit 1
