--- a/templates/pyproject.toml
+++ b/templates/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-version = {{ build_version }}
+version = "{{ build_version }}"
 name = "sdodtools_briconaut"
 description = "A set of small helpers to overcome SDOD limitations."
 authors = [
