--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -210,6 +210,7 @@ jobs:
         id: determine-distribution
         shell: bash
         run: |
+          (cd dist && ls -1 )
           read distribution < <( cd dist && ls -1 *".$build_version.tar.gz" | head -1 )
           echo "distribution=$distribution" >> "$GITHUB_ENV"
 
