--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -128,7 +128,6 @@ jobs:
           echo "Set build_version='$build_version'."
           echo "Set build_ref='$build_ref'."
 
-
   build:
     runs-on: "ubuntu-latest"
     needs: check_version
@@ -219,12 +218,14 @@ jobs:
         shell: bash
         run: |
           echo -n "distribution=$distribution"   >> "$GITHUB_OUTPUT"
+          echo -n "build_type=$build_type" >> "$GITHUB_OUTPUT"
           echo -n "build_version=$build_version" >> "$GITHUB_OUTPUT"
           echo -n "build_tag=$build_tag" >> "$GITHUB_OUTPUT"
           echo -n "build_ref=$build_ref"         >> "$GITHUB_OUTPUT"
 
           mkdir dist/META
           echo -n "$distribution"  > dist/META/DISTRIBUTION
+          echo -n "$build_type"    > dist/META/TYPE
           echo -n "$build_version" > dist/META/VERSION
           echo -n "$build_tag"     > dist/META/TAG
           echo -n "$build_ref"     > dist/META/REF
