--- a/templates/pyproject.toml
+++ b/templates/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-version = "{{ build_version if build_version_override is none or len(build_version_override) == 0 else build_version_override }}"
+version = "{{ build_version if build_version_override is none or build_version_override|length == 0 else build_version_override }}"
 name = "sdodtools_briconaut"
 description = "A set of small helpers to overcome SDOD limitations."
 authors = [
