--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -114,6 +114,14 @@ jobs:
         run: |
           build_ref="$( git rev-parse HEAD )"
           set +e
+          echo "AAAAAAAAAAAA"
+          git tag --list 'v*'
+          echo "BBBBBBBBBBBB"
+          git tag --list 'v*' | grep -v "^v[0-9]+\.[0-9]+\.[0-9]+$"
+          echo "CCCCCCCCCCCC"
+          git tag --list 'v*' | grep -v "^v[0-9]+\.[0-9]+\.[0-9]+$" | sort -V 
+          echo "DDDDDDDDDDDD"
+          git tag --list 'v*' | grep -v "^v[0-9]+\.[0-9]+\.[0-9]+$" | sort -V | tail -1
           build_tag=$( git tag --merged | grep -v "^v[0-9]+\.[0-9]+\.[0-9]+$" | sort -V | tail -1 )
           set -e
 
