--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,6 +54,7 @@ jobs:
 
               build_version_override=$( echo "$build_version_override" | sed -n "s/^v*\([0-9]*\.[0-9]*\.[0-9]*\(\.[0-9.]*\)*\)/\1/p" )
               echo "Found valid 'override_version' with value '$build_version_override'."
+              echo "build_version_override=$build_version_override" >> "$GITHUB_ENV"
 
             else
 
