--- a/templates/pyproject.toml
+++ b/templates/pyproject.toml
@@ -3,12 +3,11 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-; build_version = '{{ build_version }}'
-; build_version_override = '{{ build_version_override}}'
-; build_type = '{{ build_type }}'
-; build_ref = '{{ build_ref }}'
-; build_tag = '{{ build_tag }}'
-
+# build_version = '{{ build_version }}'
+# build_version_override = '{{ build_version_override}}'
+# build_type = '{{ build_type }}'
+# build_ref = '{{ build_ref }}'
+# build_tag = '{{ build_tag }}'
 version = "{{ build_version if ( ( build_version_override is none ) or ( build_version_override|length == 0 ) ) else build_version_override }}"
 name = "sdodtools_briconaut"
 description = "A set of small helpers to overcome SDOD limitations."
