--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,60 +8,92 @@ on:
       tag:
         description: Build tag
         required: true
-        default: "v0.0.1"
+        default: ""
         type: string
 
 jobs:
 
   prepare_release:
     runs-on: "ubuntu-latest"
-    # outputs:
-    #   build_type: ${{ steps.set-output.outputs.build_type }}
-    #   build_version: ${{ steps.set-output.outputs.build_version }}
-    #   build_ref: ${{ steps.set-output.outputs.build_ref }}
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
+
+      - name: Setup Environment
+        id: setup-environment
+        shell: bash
+        run: |
+          echo "build_tag=${{inputs.tag}}" >> "$GITHUB_ENV"
 
       - name: Check for valid tag format
         id: check-valid-tag
         shell: bash
         run: |
 
-          if [[ ! '${{inputs.tag}}' =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]] ; then 
-            echo "Invalid tag format: '${{inputs.tag}}'."
+          if [[ ! "$build_tag" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]] ; then 
+
+            echo "Invalid tag format: '$build_tag'. Setting build type 'error'."
+            echo "build_type=error" >> "$GITHUB_ENV"
             exit 1
+
           fi
 
-          echo "Found valid version format '${{inputs.tag}}'."
-          exit 0
+          echo "Found valid tag format '$build_tag'."
 
-      - name: Checkout TAG
-        id: checkout-tag
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-          fetch-depth: 1
-          fetch-tags: true
-          ref: refs/tags/${{ inputs.tag }}
+      # - name: Checkout TAG
+      #   id: checkout-tag
+      #   continue-on-error: true
+      #   uses: actions/checkout@v4
+      #   with:
+      #     submodules: recursive
+      #     fetch-depth: 1
+      #     fetch-tags: true
+      #     ref: refs/tags/${{ env.build_tag }}
+
+      # - name: Checkout HEAD
+      #   id: checkout-head
+      #   if: steps.checkout-tag.outcome == 'failure'
+      #   uses: actions/checkout@v4
+      #   with:
+      #     submodules: recursive
+      #     fetch-depth: 1
+      #     fetch-tags: true
+      #     ref: refs/tags/${{ env.build_tag }}
+
+      # - name: Set tag
+      #   id: create-tag
+      #   if: steps.checkout-tag.outcome == 'failure'
 
       - name: Check for existing release
         id: check-existing-release
         shell: bash
         run: |
           set +e
-          gh release view "${{ inputs.tag }}"
+          gh release view "$build_tag"
           status=$?
           set -e
 
           if [[ $status -ne 0 ]]; then
 
             echo "Release not found, will create a new one."
+            echo "release_type=new" >> "$GITHUB_ENV"
+            echo "release_id=" >> "$GITHUB_ENV"
             exit 0
 
           fi
           
-          gh release view --json "id,isDraft,apiUrl,tagName,uploadUrl,url,assets" "${{ inputs.tag }}"
+          gh release view --json "id,isDraft,apiUrl,tagName,uploadUrl,url,assets" "$build_tag"
+
+
+          release_id=$( gh release view --json "id" "$build_tag" )
+          echo "release_type=new" >> "$GITHUB_ENV"
+          echo "release_id=$id" >> "$GITHUB_ENV"
+
+      - name: Show env
+        id: show-env
+        shell: bash
+        run: |
+          env | sort
 
       # - name: GitHub Release
       #   id: github-release
