--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,12 +5,15 @@ permissions:
 on:
 
   workflow_dispatch:
+
     inputs:
+
       build_tag:
         description: Build tag
         required: true
         default: dry-run
         type: string
+
       build_version_override:
         description: Override the version of the distribution
         required: false
@@ -47,6 +50,7 @@ jobs:
 
       - name: Checkout TAG
         id: checkout-tag
+        if: env.build_tag != 'dry-run'
         continue-on-error: true
         uses: actions/checkout@v4
         with:
@@ -57,7 +61,7 @@ jobs:
 
       - name: Checkout HEAD
         id: checkout-head
-        if: steps.checkout-tag.outcome == 'failure'
+        if: steps.checkout-tag.outcome == 'failure' or env.build_tag == 'dry-run'
         uses: actions/checkout@v4
         with:
           submodules: recursive
@@ -81,10 +85,11 @@ jobs:
           build_type='dry-run'
           echo "Tag '$build_tag' not found. Setting build_type '$build_type'."
           echo "build_type=$build_type" >> "$GITHUB_ENV"
+          echo "build_tag=" >> "$GITHUB_ENV"
 
       - name: Set build_tag from git
         id: Set-build-version
-        if: steps.checkout-tag.outcome == 'failure' && env.build_tag == ''
+        if: env.build_type == 'dry-run' 
         shell: bash
         run: |
 
@@ -113,41 +118,12 @@ jobs:
 
       - name: Set build_version from build_tag
         id: set-build-version-from-tag
-        if: steps.checkout-tag.outcome == 'success'
         shell: bash
         run: |
           build_version=$( echo "$build_tag" | sed -n "s/^v*\([0-9]*\.[0-9]*\.[0-9]*\(\.[0-9.]*\)*\)/\1/p" )
           echo "Setting build_version to '$build_version'."
           echo "build_version=$build_version" >> "$GITHUB_ENV"
         
-      - name: Set build_version and build_tag from git
-        id: Set-build-version-from-git
-        if: steps.checkout-tag.outcome == 'failure'
-        shell: bash
-        run: |
-          if [[ -z "$build_tag" ]] ; then
-
-            set +e
-            build_tag=$( git tag --merged | grep -v "^v[0-9]+\.[0-9]+\.[0-9]+$" | sort -V | tail -1 )
-            set -e
-
-          fi
-
-          if [[ -z "$build_tag" ]] ; then 
-
-            set +e
-            build_tag=$( git tag --list 'v*' | grep -v "^v[0-9]+\.[0-9]+\.[0-9]+$" | sort -V | tail -1 )
-            set -e
-
-          fi
-
-          if [[ -z "$build_tag" ]] ; then 
-
-              build_tag="v0.0.1"
-              echo "No build_tag found, forcing '$build_tag'."
-
-          fi
-
       - name: Show env
         id: show-env
         shell: bash
